--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,15 @@
 {
   "name": "Supervila - Sistema DRE",
   "short_name": "Supervila DRE",
-  "description": "Sistema de Demonstração do Resultado do Exercício para Supervila",
+  "description": "Sistema de Demonstração do Resultado do Exercício",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#e31d1a",
   "theme_color": "#e31d1a",
   "orientation": "portrait",
+  "categories": ["finance", "business"],
+  "prefer_related_applications": false,
   "icons": [
     {
       "src": "assets/icon-72x72.png",
